--- a/glide.yaml
+++ b/glide.yaml
@@ -1,7 +1,7 @@
 package: github.com/bsm/cntdb
 import:
 - package: github.com/bsm/strset
-- package: gopkg.in/redis.v4
+- package: github.com/go-redis/redis
 testImport:
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
